5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1637_1053.log
== TEST (2019-04-09 10:21:13) 
-- CODE:
patrono=input()

if(patrono==cervo):
 print("cervo eh patrono do Harry Potter")
else:
 Print(patrono + "nao eh patrono do Harry Potter")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(patrono==cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:22:27) 
-- CODE:
patrono=input()

if patrono==cervo:
 print("cervo eh patrono do Harry Potter")
else:
 Print(patrono + "nao eh patrono do Harry Potter")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if patrono==cervo:
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:23:24) 
-- CODE:
patrono=input()
cervo=cervo
if patrono==cervo:
 print("cervo eh patrono do Harry Potter")
else:
 Print(patrono + "nao eh patrono do Harry Potter")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    cervo=cervo
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:24:11) 
-- CODE:
patrono=input()

if patrono==cervo:
 print("cervo eh patrono do Harry Potter")
else:
 Print(patrono + "nao eh patrono do Harry Potter")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if patrono==cervo:
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:26:20) 
-- CODE:
patrono=input()

if patrono=="cervo":
 print("cervo eh patrono do Harry Potter")
else:
 Print(patrono + "nao eh patrono do Harry Potter")
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:26:33) 
-- CODE:
patrono=input()

if patrono=="cervo":
 print("cervo eh patrono do Harry Potter")
else:
 Print(patrono + "nao eh patrono do Harry Potter")
-- EXECUTION TIME:
0.152569
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:26:39) 
-- CODE:
patrono=input()

if patrono=="cervo":
 print("cervo eh patrono do Harry Potter")
else:
 Print(patrono + "nao eh patrono do Harry Potter")
-- EXECUTION TIME:
0.188022
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:26:41) 
-- CODE:
patrono=input()

if patrono=="cervo":
 print("cervo eh patrono do Harry Potter")
else:
 Print(patrono + "nao eh patrono do Harry Potter")
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:26:56) 
-- CODE:
patrono=input()

if patrono=="cervo":
 print("cervo eh patrono do Harry Potter")
else:
 print(patrono + "nao eh patrono do Harry Potter")
-- EXECUTION TIME:
0.16644
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:26:57) 
-- CODE:
patrono=input()

if patrono=="cervo":
 print("cervo eh patrono do Harry Potter")
else:
 print(patrono + "nao eh patrono do Harry Potter")
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:27:12) 
-- CODE:
patrono=input()

if patrono=="cervo":
 print("cervo eh patrono do Harry Potter")
else:
 print(patrono + " nao eh patrono do Harry Potter")
-- EXECUTION TIME:
0.131046
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
